tests/sksl/errors/ReservedNameOutput.glsl
### Compilation failed:

error: 1: name 'output' is reserved
int output;
    ^^^^^^
1 error
